fix(YALB-1658): overflow

--- a/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
+++ b/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
@@ -208,6 +208,10 @@ $modal-speed: var(--animation-speed-slow);
   width: 100%;
   max-width: calc(100% - var(--size-click-target-minimum));
   overflow: hidden;
+
+  &[aria-expanded='true'] {
+    overflow: auto;
+  }
 }
 
 .media-grid-modal__content {
